# rust-xdg

./: .clippy.toml  .gitignore  .travis.yml  Cargo.toml  README.md  foo.desktop  search-index.js
.github/workflows/: ci.yml  docs.yml
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/std/error/: trait.Error.js
src/: base.rs  base_directories.rs  desktop_entries.rs  desktop_entry.rs  error.rs  lib.rs  user.rs  util.rs  xdg.rs
src/desktop_entry/: error.rs  locale.rs  mod.rs  test.rs
src/permissions/: mod.rs  unix_redox.rs  windows.rs
src/xdg/: lib.rs.html
test_files/desktop_entries/: fail.desktop  test-multiple.desktop  test.desktop
test_files/symlinks/config/: myapp
xdg/: BaseDirectories.t.html  BaseDirectoriesError.t.html  index.html  sidebar-items.js  struct.BaseDirectories.html  struct.BaseDirectoriesError.html
