[package]
name = "xdg"
version = "2.4.1"
description = "A library for storing and retrieving files according to XDG Base Directory specification"
homepage = "https://github.com/whitequark/rust-xdg"
repository = "https://github.com/whitequark/rust-xdg"
documentation = "https://docs.rs/xdg/"
readme = "README.md"
keywords = ["linux", "configuration"]
license = "Apache-2.0/MIT"
authors = [
    "Ben Longbons <b.r.longbons@gmail.com>",
    "whitequark <whitequark@whitequark.org>"
]

[dependencies]
dirs = "5.0"
serde = { version = "*", features = ["derive"], optional = true }
