[package]
name = "xdg"
version = "2.5.2"
description = "A library for storing and retrieving files according to XDG Base Directory specification"
homepage = "https://github.com/whitequark/rust-xdg"
repository = "https://github.com/whitequark/rust-xdg"
documentation = "https://docs.rs/xdg/"
readme = "README.md"
edition = "2018"
categories = ["filesystem"]
keywords = ["linux", "configuration"]
license = "Apache-2.0 OR MIT"
authors = [
    "Ben Longbons <b.r.longbons@gmail.com>",
    "whitequark <whitequark@whitequark.org>"
]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
